# BGI-Cloud-Disk-Batch-Downloader

./: .gitignore  Cargo.toml  README.md  pyproject.toml  readme.md
old_python/src/: main.py
src/: main.rs
