[package]
name = "bgi_cloud_disk_batch_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
chrono = "0.4"
clap = { version = "3.2.17", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
