[tool.poetry]
name = "bgi-cloud-disk-batch-downloader"
version = "0.1.0"
description = ""
authors = ["myuan <zhengmy@ion.ac.cn>"]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
requests = "^2.28.1"
fake-useragent = "^0.1.11"
colorama = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
